@@ -60,6 +60,7 @@ set (CPPFILES
   Fl_Shared_Image.cxx
   Fl_Single_Window.cxx
   Fl_Slider.cxx
+  Fl_Spinner.cxx
   Fl_System_Driver.cxx
   Fl_Table.cxx
   Fl_Table_Row.cxx
